syntax = "proto3";
package layer.reporter;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "layer/reporter/oracle_reporter.proto";
import "layer/reporter/params.proto";

option go_package = "github.com/tellor-io/layer/x/reporter/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/tellor-io/layer/reporter/params";
  }
  // Reporters queries all the staked reporters.
  rpc Reporters(QueryReportersRequest) returns (QueryReportersResponse) {
    option (google.api.http).get = "/tellor-io/layer/reporter/reporters";
  }
  // SelectorReporter queries the reporter of a selector.
  rpc SelectorReporter(QuerySelectorReporterRequest) returns (QuerySelectorReporterResponse) {
    option (google.api.http).get = "/tellor-io/layer/reporter/selector-reporter/{selector_address}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryReportersRequest is the request type for the Query/Reporters RPC method.
message QueryReportersRequest {}

// QueryReportersResponse is the response type for the Query/Reporters RPC method.
message QueryReportersResponse {
  // all the reporters.
  repeated OracleReporter reporters = 1;
}

// QuerySelectorReporterRequest is the request type for the
// Query/SelectorReporter RPC method.
message QuerySelectorReporterRequest {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // selector_address defines the selector address to query for.
  string selector_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// QuerySelectorReporterResponse is the response type for the
// Query/SelectorReporter RPC method.
message QuerySelectorReporterResponse {
  // reporter defines the reporter of a selector.
  string reporter = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}
